...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLikeButton"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:src="@drawable/ic_like"
                android:tint="@color/textColor" />

            <ImageView
                android:id="@+id/ivBookmarkButton"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:src="@drawable/ic_bookmark"
                android:tint="@color/textColor" />
        </LinearLayout>
...
