...
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    tools:text="Some title recipe"
                    />

            <ImageView
                    android:id="@+id/ivDetailLikeButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_like"
                    android:tint="@color/textColor"
                    />

            <ImageView
                    android:id="@+id/ivDetailBookmarkButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_bookmark"
                    android:tint="@color/textColor"
                    />
...
